<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.DisputeFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rv_disputes_item_title"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:textSize="18sp"
        android:textColor="@color/primary_text"
        app:layout_constraintBottom_toTopOf="@+id/tv_description_title"
        app:layout_constraintEnd_toStartOf="@id/tv_tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_tag"
        android:padding="4dp"
        android:textColor="@color/icons"
        app:layout_constraintCircleRadius="4dp"
        android:background="@color/colorAccent"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_title"
        app:layout_constraintBottom_toTopOf="@+id/tv_description_title" />

    <TextView
        android:id="@+id/tv_description_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_dispute_description"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="24dp"
        android:textColor="@color/secondary_text"
        app:layout_constraintBottom_toTopOf="@+id/tv_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_dispute_description"
        android:textSize="16sp"
        android:textColor="@color/primary_text"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_first_position_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_title" />

    <TextView
        android:id="@+id/tv_first_position_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_first_position_title"
        android:layout_marginTop="16dp"
        android:textColor="@color/secondary_text"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_first_position"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <TextView
        android:id="@+id/tv_first_position"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:text="@string/dispute_tv_description"
        android:layout_marginHorizontal="24dp"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_first_position_title"
        app:layout_constraintBottom_toTopOf="@+id/btn_vote_desc1" />

    <Button
        android:id="@+id/btn_vote_desc1"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_vote"
        android:background="@color/colorPrimary"
        android:textColor="@color/icons"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_first_position"
        app:layout_constraintBottom_toTopOf="@id/tv_second_position_title" />

    <TextView
        android:id="@+id/tv_second_position_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_second_position_title"
        android:layout_marginTop="8dp"
        android:textColor="@color/secondary_text"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_description2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_vote_desc1" />

    <TextView
        android:id="@+id/tv_description2"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:text="@string/dispute_tv_description"
        android:layout_marginHorizontal="24dp"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_second_position_title"
        app:layout_constraintBottom_toTopOf="@id/btn_vote_desc2" />

    <Button
        android:id="@+id/btn_vote_desc2"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_vote"
        android:background="@color/colorPrimary"
        android:textColor="@color/icons"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description2"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>