<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.SignUpFragment">

    <ImageView
        android:id="@+id/img_icon_registration"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_conversation"
        app:layout_constraintBottom_toTopOf="@+id/tv_errors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_errors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_errors"
        android:textColor="@color/colorAccent"
        android:layout_marginHorizontal="16dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/img_icon_registration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_username" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_username"
        android:inputType="text"
        android:textColor="@color/primary_text"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_errors" />


    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_email"
        android:layout_marginHorizontal="16dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/primary_text"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_password"
        android:inputType="textPassword"
        android:textColor="@color/primary_text"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@+id/et_repeat_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_repeat_password"
        android:inputType="textPassword"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/primary_text"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_up"
        android:layout_marginHorizontal="16dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/icons"
        app:layout_constraintBottom_toTopOf="@id/reg_btn_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_repeat_password" />

    <!--    <TextView-->
    <!--        android:id="@+id/tv_go_to_login"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/tv_go_to_login"-->
    <!--        android:textColor="@color/special_text"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/reg_btn_sign_in"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/btn_sign_up" />-->

    <!--    <Button-->
    <!--        android:id="@+id/reg_btn_sign_in"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/btn_log_in"-->
    <!--        android:layout_marginHorizontal="16dp"-->
    <!--        android:background="@color/colorPrimary"-->
    <!--        android:textColor="@color/icons"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/tv_go_to_login" />-->

    <Button
        android:id="@+id/reg_btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_go_to_login"
        android:textColor="@color/special_text"
        android:background="@null"
        style="@style/MyButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />

</androidx.constraintlayout.widget.ConstraintLayout>